--- a/src/Pages/MeetingRoom/MeetingRoom.css
+++ b/src/Pages/MeetingRoom/MeetingRoom.css
@@ -1,68 +1,77 @@
 .meeting-room-container {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
-  .video-container {
-    flex-grow: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-    background-color: #000;
-  }
-  
-  .participant-video {
-    width: 300px;
-    height: 200px;
-    background-color: #666;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    border-radius: 10px;
-  }
-  
-  .controls-container {
-    position: absolute;
-    bottom: 15px;
-    left: 30%;
-    right: 30%;
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    padding: 20px;
-  }
-  
-  .control-button {
-    background-color: #fff;
-    border: none;
-    border-radius: 100%;
-    width: 70px;
-    height: 70px;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-    transition: background-color 0.3s, transform 0.2s;
-  }
-  
-  .control-button:hover {
-    background-color: #f0f0f0;
-    transform: scale(1.1);
-  }
-  .control-button-icon {
-    width: 50px;
-    height: 50px;
-  }
-  .chat-panel {
-    background-color: #f9f9f9;
-    width: 300px;
-    height: 100px;
-    padding: 20px;
-    overflow-y: auto;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.video-container {
+  flex-grow: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+  /* background-color: #000; */
+}
+
+.participant-video {
+  width: 300px;
+  height: 200px;
+  background-color: #666;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.participant-video video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.controls-container {
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.control-button {
+  background-color: #fff;
+  border: none;
+  border-radius: 100%;
+  width: 70px;
+  height: 70px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, transform 0.2s;
+}
+
+.control-button:hover {
+  background-color: #f0f0f0;
+  transform: scale(1.1);
+}
+
+.control-button-icon {
+  width: 50px;
+  height: 50px;
+}
+
+.chat-panel {
+  background-color: #f9f9f9;
+  width: 300px;
+  height: 100px;
+  padding: 20px;
+  overflow-y: auto;
+}
